adiccion de la conexxion a la base de datos

--- a/ClinicOrg/appsettings.json
+++ b/ClinicOrg/appsettings.json
@@ -1,6 +1,8 @@
 {
+
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ClinicOrg-897b7a6a-0357-47d5-9af9-0839e9143ae2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source:(local), Inital Catalog=ClinicOrg; Integrated Security=true"
   },
   "Logging": {
     "LogLevel": {
